[tool.poetry]
name = 'juneberry'
version = '1.1'
description = 'Lightweight Python logging without dependencies'
authors = ['mmlvgx <mmlvgx@gmail.com>']
license = 'MIT'
readme = 'README.md'
packages = [{include = 'juneberry', from = 'src'}]


[tool.poetry.dependencies]
python = '^3.10'


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
